--- a/ichiwabi/ichiwabi.entitlements
+++ b/ichiwabi/ichiwabi.entitlements
@@ -6,5 +6,15 @@
     <true/>
     <key>com.apple.security.files.user-selected.read-only</key>
     <true/>
+    <key>com.apple.security.device.camera</key>
+    <true/>
+    <key>com.apple.security.personal-information.photos-library</key>
+    <true/>
+    <key>com.apple.security.device.microphone</key>
+    <true/>
+    <key>keychain-access-groups</key>
+    <array>
+        <string>$(AppIdentifierPrefix)com.ichiwabi.app</string>
+    </array>
 </dict>
 </plist>
