Polished Up and nearly perfect

--- a/ichiwabi/Info.plist
+++ b/ichiwabi/Info.plist
@@ -5,13 +5,39 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSUserNotificationsUsageDescription</key>
-	<string>ichiwabi sends notifications to remind you to record your dreams while they're still fresh in your mind.</string>
+	<string>ichiwabi sends notifications to remind you to record your dreams while they&apos;re still fresh in your mind.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
+		<key>UISceneConfigurations</key>
+		<dict>
+			<key>UIWindowSceneSessionRoleApplication</key>
+			<array>
+				<dict>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
+					<key>UISceneDelegateClassName</key>
+					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+				</dict>
+			</array>
+		</dict>
 	</dict>
 	<key>UILaunchScreen</key>
-	<dict/>
+	<dict>
+		<key>UILaunchStoryboardName</key>
+		<string>LaunchScreen</string>
+		<key>UILaunchScreen</key>
+		<dict>
+			<key>UIColorName</key>
+			<string>darkNavy</string>
+			<key>UIImageName</key>
+			<string>LaunchScreenImage</string>
+			<key>UIImageRespectsSafeAreaInsets</key>
+			<false/>
+		</dict>
+	</dict>
+	<key>UIUserInterfaceStyle</key>
+	<string>Dark</string>
 </dict>
 </plist>
