--- a/ichiwabi/Info.plist
+++ b/ichiwabi/Info.plist
@@ -5,7 +5,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSUserNotificationsUsageDescription</key>
-	<string>ichiwabi sends notifications to remind you to record your dreams while they&apos;re still fresh in your mind.</string>
+	<string>ichiwabi sends notifications to remind you to record your dreams while they're still fresh in your mind.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -23,21 +23,5 @@
 			</array>
 		</dict>
 	</dict>
-	<key>UILaunchScreen</key>
-	<dict>
-		<key>UILaunchStoryboardName</key>
-		<string>LaunchScreen</string>
-		<key>UILaunchScreen</key>
-		<dict>
-			<key>UIColorName</key>
-			<string>darkNavy</string>
-			<key>UIImageName</key>
-			<string>LaunchScreenImage</string>
-			<key>UIImageRespectsSafeAreaInsets</key>
-			<false/>
-		</dict>
-	</dict>
-	<key>UIUserInterfaceStyle</key>
-	<string>Dark</string>
 </dict>
 </plist>
